# img2dataset_test

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
data/: laion2b_korean_limit_10000.parquet
